--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
+  "homepage":"https://JBxss.github.io/Petgram",
   "name": "curso-platzi-react-avanzado",
   "version": "1.0.0",
   "description": "**¡Sígueme en Youtube para más contenido de React y Javascript!** 👉 https://www.youtube.com/midudev",
   "main": "index.js",
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "vercel-build": "npm run build",
     "dev": "webpack-dev-server --open --mode development",
     "build": "webpack --mode production",
@@ -26,6 +29,7 @@
     "@babel/preset-env": "^7.18.2",
     "@babel/preset-react": "^7.17.12",
     "babel-loader": "^8.2.5",
+    "gh-pages": "^4.0.0",
     "html-webpack-plugin": "^5.5.0",
     "standard": "^17.0.0",
     "webpack": "^5.73.0",
